<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:fillViewport="true">
    
      	<RelativeLayout
	    android:id="@+id/relativeLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:background="@drawable/background">
    
      <LinearLayout
          android:id="@+id/hLayout1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:orientation="horizontal" >
           
          <LinearLayout
	          android:id="@+id/vLayoutLeft"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:orientation="vertical" >

              <TextView
                  android:id="@+id/textBlanksLeft1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="@string/blanks" android:layout_gravity="center"
                  android:textAppearance="?android:attr/textAppearanceLarge" />

              <TextView
                  android:id="@+id/textBlanksLeft2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="@string/blanks" android:layout_gravity="center"
                  android:textAppearance="?android:attr/textAppearanceLarge" />
              
              
              <TextView
                  android:id="@+id/textView1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="@string/input" android:layout_gravity="center"
                  android:textAppearance="?android:attr/textAppearanceLarge" />
	
		        <ToggleButton
	               android:id="@+id/toggleButtonLeft"
	               android:layout_width="75dp"
			      android:layout_height="60dp"
			      android:textStyle="bold"
	              android:textOff="IP" android:textOn="SI" android:ems="4" android:textSize="20sp" android:layout_gravity="center"/>
		       <Spinner
	              android:id="@+id/spinner1Left"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	              android:ems="5" android:layout_gravity="center"
	              android:background="@android:drawable/btn_default"
	              android:textSize="12sp" />
	        	<Spinner
	              android:id="@+id/spinner2Left"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	              android:ems="5" android:layout_gravity="center"
	              android:background="@android:drawable/btn_default"
	              android:textSize="12sp" />
	        	<Spinner
	              android:id="@+id/spinner3Left"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	              android:ems="5" android:layout_gravity="center"
	              android:background="@android:drawable/btn_default"
	              android:textSize="12sp" />
	       
	       </LinearLayout>
		       
		 <LinearLayout
	          android:id="@+id/vLayoutRight"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:orientation="vertical" >
	        	
			<TextView
                  android:id="@+id/textBlanksRight1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="@string/blanks" android:layout_gravity="center"
                  android:textAppearance="?android:attr/textAppearanceLarge" />
		     <TextView
                  android:id="@+id/textBlanksRight2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="@string/blanks" android:layout_gravity="center"
                  android:textAppearance="?android:attr/textAppearanceLarge" />
		     
		     <TextView
		         android:id="@+id/textView2"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/output" android:layout_gravity="center"
		         android:textAppearance="?android:attr/textAppearanceLarge" />
		   <ToggleButton
	               android:id="@+id/toggleButtonRight"
	               android:layout_width="75dp"
			       android:layout_height="60dp"
			       android:textStyle="bold"
	               android:textOff="IP" android:textOn="SI" android:ems="4" android:textSize="20sp" android:gravity="center" android:layout_gravity="center"/>
	      	<Spinner
	              android:id="@+id/spinner1Right"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	              android:ems="5" android:layout_gravity="center"
	              android:background="@android:drawable/btn_default"
	              android:textSize="12sp" />
	      	<Spinner
	              android:id="@+id/spinner2Right"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	              android:ems="5" android:layout_gravity="center"
	              android:background="@android:drawable/btn_default"
	              android:textSize="12sp" />
	        <Spinner
	              android:id="@+id/spinner3Right"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	              android:ems="5" android:layout_gravity="center"
	              android:background="@android:drawable/btn_default"
	              android:textSize="12sp" />
	       <Spinner
	              android:id="@+id/spinner4Right"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	             android:ems="5" android:layout_gravity="center"
	             android:background="@android:drawable/btn_default"
	             android:textSize="12sp" />
	       <Spinner
	              android:id="@+id/spinner5Right"
	              android:layout_width="120dp"
			      android:layout_height="40dp"
			      android:textStyle="bold"
	              android:ems="5" android:layout_gravity="center"
	              android:background="@android:drawable/btn_default"
	              android:textSize="12sp" />
	       
	      </LinearLayout>
       </LinearLayout>

      <Button
          android:id="@+id/buttonSetAsDefaults"
          android:layout_width="120dp"
	      android:layout_height="40dp"
	      android:textStyle="bold"
          android:layout_below="@+id/hLayout1"
          android:layout_centerHorizontal="true"
          android:text="@string/setasdefaults" 
          android:textSize="12sp" />

    </RelativeLayout>
</ScrollView>